fix display salat el aid on mobile

--- a/src/AppBundle/Resources/public/prayer-times/css/mobile.css
+++ b/src/AppBundle/Resources/public/prayer-times/css/mobile.css
@@ -77,9 +77,13 @@ body {
     font-size: 150%;
 }
 
-.prayer-content .prayer, .chourouk-id, .joumouaa-id, .imsak-id {
+.prayer-content .prayer, .chourouk-id, .joumouaa-id, .imsak-id, .aid-id{
     font-size: 250% !important;
     color: yellowgreen;
+}
+
+.aid-id {
+    color: red;
 }
 
 .prayer-hilighted {
